--- a/index.html
+++ b/index.html
@@ -25,5 +25,17 @@
   </div>
 
   <script src="script.js"></script>
+  <!-- Script del login con World ID -->
+<script src="https://unpkg.com/@worldcoin/id"></script>
+
+<world-id
+  action_id="action_d1cf755d61ce237f0418364a8560e0f5"
+  signal="cococity"
+  enableTelemetry
+  app_id="app_6de7e0c1084781efd1e96d34f305cc88"
+  on_success="handleVerificationSuccess"
+  on_error="handleVerificationError"
+></world-id>
+
 </body>
 </html>
